Aula 5 - Listas Footer

--- a/IntoducaoWebsitesHtml5Css3/index.html
+++ b/IntoducaoWebsitesHtml5Css3/index.html
@@ -35,11 +35,17 @@
                     </li>
                 </ul>
                 
-                <p>Email: <a href="mailto:kelwin.frederik@gmail.com">kelwin.frederik@gmail.com</a></p>
+                <p> Email: <a target="_blank" href="mailto:kelwin.frederik@gmail.com"> kelwin.frederik@gmail.com</a></p>
                 ”Seja um parâmetro de qualidade. Algumas pessoas não estão acostumadas a um ambiente onde a excelência é esperada.” <small>- Steve Jobs</smal>
             </p>
         </article>
     </section>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li><a target="_blank" href="mailto:kelwin.frederik@gmail.com"> Email </a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/kelwin-frederik-alves/" > linkedin </a></li>
+            <li><a target="_blank" href="https://github.com/KelwinFrederik" > GitHub </a></li>
+        </ul>
+    </footer>
 </body>
 </html>
