Aula 8 - Finalização Projeto Clone NetFlix

--- a/CloneNetflix/index.html
+++ b/CloneNetflix/index.html
@@ -7,13 +7,15 @@
     <title>PodFlix</title>
 
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/owl/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="css/owl/owl.theme.default.min.css"/>
 </head>
 <body>
     <header>
         <div class="container">
             <h2 class="logo"> PodFlix </h2>
             <nav>
-                <a herf="#"> Início </a>
+                <a herf="#inicio"> Início </a>
                 <a herf="#"> Negócios </a>
                 <a herf="#"> Saúde </a>
                 <a herf="#"> Autoconhecimento </a>
@@ -22,18 +24,124 @@
     </header>
 
     <main>
-        <div class="principal">
+        <div id="inicio" class="principal">
             <div class="container">
-                <h3 class="titulo"> The Mindset Mentor </h3>
-                <small class="autorPodcast"> Rob Dial and Kast Media </small>
+                <h3 class="titulo"> Giant Bombcast </h3>
+                <small class="autorPodcast"> Giant Bomb </small>
                 <div id="descricaoImagem">
-                    <p class="descricao"> The Mindset Mentor™ podcast is designed for anyone desiring motivation, direction, and focus in life. Host Rob Dial has amassed a passionate following of over 3 million social media followers, including business professionals, entrepreneurs, and small business owners with his expertise and passion for helping motivate people to become the best version of themselves.</p>
+                    <p class="descricao"> Giant Bomb discusses the latest video game news and new releases, taste-test questionable beverages, and get wildly off-topic in this weekly podcast, and to give you what you need when it comes to the world of video games, new and old. Fire up a Quick Look, sit back, and enjoy, friends.</p>
                     <div class="imagemPodCast"></div>
                 </div>
-                <button role="button" class="button">Ouvir Agora</button>
-                <button role="button" class="button">Ir para o Autor</button>
+                <button role="button" class="button"> <i class="fa-solid fa-play"></i> Ouvir Agora</button>
+                <button role="button" class="button"> <i class="fa-solid fa-circle-info"></i> Ir para o Autor</button>
             </div>
         </div>
     </main>
+    <div class="owl-carousel owl-theme">
+        <div class="item">
+            <img src="Assets/AllIn.jpg"/>
+            <p>All-In with Chamath, Jason, Sacks & Friedberg</p>
+        </div>
+        <div class="item">
+            <img src="Assets/MindeSetMentor.jpg"/>
+            <p>The Mindset Mentor - Rob Dial and Kast Media</p>
+        </div>
+        <div class="item">
+            <img src="Assets/DarknetDiaries.jpg"/>
+            <p>Darknet Diaries - Jack Rhysider </p>
+        </div>
+        <div class="item">
+            <img src="Assets/Gaana.jpg"/>
+            <p>Gaana Music - Urna Choudhary</p>
+        </div>
+        <div class="item">
+            <img src="Assets/LexFridman.jpg"/>
+            <p>Lex Fridman Podcast</p>
+        </div>
+        <div class="item">
+            <img src="Assets/MakeMeSmart.png"/>
+            <p>Make Me Smart - Marketplace</p>
+        </div>
+        <div class="item">
+            <img src="Assets/mustari.jpg"/>
+            <p>free fire - Mustari</p>
+        </div>
+        <div class="item">
+            <img src="Assets/Pivotjpg.jpg"/>
+            <p>Pivot - New York Magazine</p>
+        </div>
+        <div class="item">
+            <img src="Assets/ReplyAll.jpg"/>
+            <p>Reply - AllGimlet</p>
+        </div>
+        <div class="item">
+            <img src="Assets/TechStuff.jpg"/>
+            <p>TechStuff - iHeartPodcasts</p>
+        </div>
+        <div class="item">
+            <img src="Assets/TheDailyjpg.jpg"/>
+            <p>The Daily - The New York Times</p>
+        </div>
+        <div class="item">
+            <img src="Assets/thisAmericamLife.png"/>
+            <p>This American Life</p>
+        </div>
+    </div>
+
+    <div class="owl-carousel owl-theme">
+        <div class="item">
+            <img src="Assets/AllIn.jpg"/>
+            <p>All-In with Chamath, Jason, Sacks & Friedberg</p>
+        </div>
+        <div class="item">
+            <img src="Assets/MindeSetMentor.jpg"/>
+            <p>The Mindset Mentor - Rob Dial and Kast Media</p>
+        </div>
+        <div class="item">
+            <img src="Assets/DarknetDiaries.jpg"/>
+            <p>Darknet Diaries - Jack Rhysider </p>
+        </div>
+        <div class="item">
+            <img src="Assets/Gaana.jpg"/>
+            <p>Gaana Music - Urna Choudhary</p>
+        </div>
+        <div class="item">
+            <img src="Assets/LexFridman.jpg"/>
+            <p>Lex Fridman Podcast</p>
+        </div>
+        <div class="item">
+            <img src="Assets/MakeMeSmart.png"/>
+            <p>Make Me Smart - Marketplace</p>
+        </div>
+        <div class="item">
+            <img src="Assets/mustari.jpg"/>
+            <p>free fire - Mustari</p>
+        </div>
+        <div class="item">
+            <img src="Assets/Pivotjpg.jpg"/>
+            <p>Pivot - New York Magazine</p>
+        </div>
+        <div class="item">
+            <img src="Assets/ReplyAll.jpg"/>
+            <p>Reply - AllGimlet</p>
+        </div>
+        <div class="item">
+            <img src="Assets/TechStuff.jpg"/>
+            <p>TechStuff - iHeartPodcasts</p>
+        </div>
+        <div class="item">
+            <img src="Assets/TheDailyjpg.jpg"/>
+            <p>The Daily - The New York Times</p>
+        </div>
+        <div class="item">
+            <img src="Assets/thisAmericamLife.png"/>
+            <p>This American Life</p>
+        </div>
+    </div>
+    
+    <script src="https://kit.fontawesome.com/e717b920da.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="js/owl/owl.carousel.min.js" crossorigin="anonymous"></script>
+    <script src="js/index.js" crossorigin="anonymous"></script>
 </body>
 </html>
