Update - adicao de sessoes e podcasts

--- a/CloneNetflix/index.html
+++ b/CloneNetflix/index.html
@@ -16,9 +16,9 @@
             <h2 class="logo"> PodFlix </h2>
             <nav>
                 <a herf="#inicio"> Início </a>
-                <a herf="#"> Negócios </a>
-                <a herf="#"> Saúde </a>
-                <a herf="#"> Autoconhecimento </a>
+                <a herf="#negocios"> Negócios </a>
+                <a herf="#saude"> Saúde </a>
+                <a herf="#autoconhecimento"> Autoconhecimento </a>
             </nav>
         </div>
     </header>
@@ -33,112 +33,429 @@
                     <div class="imagemPodCast"></div>
                 </div>
                 <button role="button" class="button"> <i class="fa-solid fa-play"></i> Ouvir Agora</button>
-                <button role="button" class="button"> <i class="fa-solid fa-circle-info"></i> Ir para o Autor</button>
+                <button role="button" class="button"> <i class="fa-solid fa-circle-info"></i> Informações </button>
             </div>
         </div>
     </main>
-    <div class="owl-carousel owl-theme">
-        <div class="item">
-            <img src="Assets/AllIn.jpg"/>
-            <p>All-In with Chamath, Jason, Sacks & Friedberg</p>
-        </div>
-        <div class="item">
-            <img src="Assets/MindeSetMentor.jpg"/>
-            <p>The Mindset Mentor - Rob Dial and Kast Media</p>
-        </div>
-        <div class="item">
-            <img src="Assets/DarknetDiaries.jpg"/>
-            <p>Darknet Diaries - Jack Rhysider </p>
-        </div>
-        <div class="item">
-            <img src="Assets/Gaana.jpg"/>
-            <p>Gaana Music - Urna Choudhary</p>
-        </div>
-        <div class="item">
-            <img src="Assets/LexFridman.jpg"/>
-            <p>Lex Fridman Podcast</p>
-        </div>
-        <div class="item">
-            <img src="Assets/MakeMeSmart.png"/>
-            <p>Make Me Smart - Marketplace</p>
-        </div>
-        <div class="item">
-            <img src="Assets/mustari.jpg"/>
-            <p>free fire - Mustari</p>
-        </div>
-        <div class="item">
-            <img src="Assets/Pivotjpg.jpg"/>
-            <p>Pivot - New York Magazine</p>
-        </div>
-        <div class="item">
-            <img src="Assets/ReplyAll.jpg"/>
-            <p>Reply - AllGimlet</p>
-        </div>
-        <div class="item">
-            <img src="Assets/TechStuff.jpg"/>
-            <p>TechStuff - iHeartPodcasts</p>
-        </div>
-        <div class="item">
-            <img src="Assets/TheDailyjpg.jpg"/>
-            <p>The Daily - The New York Times</p>
-        </div>
-        <div class="item">
-            <img src="Assets/thisAmericamLife.png"/>
-            <p>This American Life</p>
-        </div>
-    </div>
 
-    <div class="owl-carousel owl-theme">
-        <div class="item">
-            <img src="Assets/AllIn.jpg"/>
-            <p>All-In with Chamath, Jason, Sacks & Friedberg</p>
+    <section id="recomendados" id="recomendados">
+        <h4 class ="sectionTitulo"> Recomendados </h4>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/AllIn.jpg"/>
+                    <p>
+                        All-In
+                        <br />
+                        <small> Jason, Sacks & Friedberg</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/MindeSetMentor.jpg"/>
+                    <p>
+                        The Mindset Mentor 
+                        <br />
+                        <small>Rob Dial and Kast Media</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/reinventar.png"/>
+                    <p>
+                        Reinventar, ressignificar, recomeçar.
+                        <br />
+                        <small>Sodexo</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Jornada.jpg"/>
+                    <p>
+                        Jornada da Calma
+                        <br />
+                        <small>Helena Galante</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/autoconciente.png"/>
+                    <p>
+                        Autoconsciente
+                        <br />
+                        <small>B9, Regina Giannetti</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/DarknetDiaries.jpg"/>
+                    <p>
+                        Darknet Diaries
+                        <br />
+                        <small> Jack Rhysider </small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Gaana.jpg"/>
+                    <p>
+                        Gaana Music
+                        <br />
+                        <small>Urna Choudhary</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/LexFridman.jpg"/>
+                    <p>
+                        Lex Fridman Podcast
+                        <br />
+                        <small>Lex Fridman</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/MakeMeSmart.png"/>
+                    <p>
+                        Make Me Smart
+                        <br />
+                        <small>Marketplace</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/mustari.jpg"/>
+                    <p>
+                        free fire
+                        <br />
+                        <small>Mustari</small>
+                    </p>                
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Pivotjpg.jpg"/>
+                    <p>
+                        Pivot
+                        <br />
+                        <small>New York Magazine</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Talks.png"/>
+                    <p>
+                        Mayo Clinic Talks
+                        <br />
+                        <small> Mayo Clinic </small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Ausculta.jpg"/>
+                    <p>
+                        Ausculta Aqui
+                        <br />
+                        <small>SanarFlix</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/jaleco.png"/>
+                    <p>
+                        De papo com Jaleco
+                        <br />
+                        <small>Bryan Porphirio</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/ReplyAll.jpg"/>
+                    <p>
+                        Reply All
+                        <br />
+                        <small> Gimlet</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/TechStuff.jpg"/>
+                    <p>
+                        TechStuff 
+                        <br />
+                        <small>iHeartPodcasts</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">                
+                <div class="owlItemTemplate">
+                    <img src="Assets/TheDailyjpg.jpg"/>
+                    <p>
+                        The Daily
+                        <br />
+                        <small>The New York Times</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/thisAmericamLife.png"/>
+                    <p>
+                        This American Life
+                        <br />
+                        <small>This American Life</small>
+                    </p>
+
+                </div>
+            </div>
         </div>
-        <div class="item">
-            <img src="Assets/MindeSetMentor.jpg"/>
-            <p>The Mindset Mentor - Rob Dial and Kast Media</p>
+        <hr />
+    </section>
+
+    <section id="negocios" name="negocios">
+        <h4 class ="sectionTitulo"> Negócios </h4>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/AllIn.jpg"/>
+                    <p>
+                        All-In
+                        <br />
+                        <small> Jason, Sacks & Friedberg</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/PlanetMonkey.png"/>
+                    <p>
+                        Planet Money
+                        <br />
+                        <small>NPR</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/MakeMeSmart.png"/>
+                    <p>
+                        Make Me Smart
+                        <br />
+                        <small>Marketplace</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/TheIndicator.png"/>
+                    <p>
+                        The Indicator
+                        <br />
+                        <small>NPR</small>
+                    </p>                
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/MindeSetMentor.jpg"/>
+                    <p>
+                        The Mindset Mentor 
+                        <br />
+                        <small>Rob Dial and Kast Media</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/theRamsey.jpg"/>
+                    <p>
+                        The Ramsey Show
+                        <br />
+                        <small> Ramsey Network </small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/onPurpose.jpg"/>
+                    <p>
+                        On Purpose 
+                        <br />
+                        <small>Jay Shetty</small>
+                    </p>
+
+                </div>
+            </div>
         </div>
-        <div class="item">
-            <img src="Assets/DarknetDiaries.jpg"/>
-            <p>Darknet Diaries - Jack Rhysider </p>
+        <hr />
+    </section>
+
+    <section id="saude" name="saude">
+        <h4 class ="sectionTitulo"> Saúde </h4>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/estilosaudavel.jpg"/>
+                    <p>
+                        ESTILO SAUDÁVEL
+                        <br />
+                        <small> joanina procida</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/DozeCast.jpg"/>
+                    <p>
+                        DozeCast - Cardiologia 
+                        <br />
+                        <small>Doze Por Oito</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Talks.png"/>
+                    <p>
+                        Mayo Clinic Talks
+                        <br />
+                        <small> Mayo Clinic </small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Ausculta.jpg"/>
+                    <p>
+                        Ausculta Aqui
+                        <br />
+                        <small>SanarFlix</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/jaleco.png"/>
+                    <p>
+                        De papo com Jaleco
+                        <br />
+                        <small>Bryan Porphirio</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/hackmed.jpg"/>
+                    <p>
+                        Hackmed Podcast
+                        <br />
+                        <small>Hackmed Podcast</small>
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="item">
-            <img src="Assets/Gaana.jpg"/>
-            <p>Gaana Music - Urna Choudhary</p>
+        <hr />
+    </section>
+
+    <section id="autoconhecimento" name="autoconhecimento">
+        <h4 class ="sectionTitulo"> Autoconhecimento </h4>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/zencast.jpg"/>
+                    <p>
+                        Zencast
+                        <br />
+                        <small> Zenklub</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/MeuInconsciente.png"/>
+                    <p>
+                        Meu Inconsciente Coletivo
+                        <br />
+                        <small>Folha de S. Paulo</small>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/toconciente.jpg"/>
+                    <p>
+                        Autoconsciência
+                        <br />
+                        <small>Isabel Vesco</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/reinventar.png"/>
+                    <p>
+                        Reinventar, ressignificar, recomeçar.
+                        <br />
+                        <small>Sodexo</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/Jornada.jpg"/>
+                    <p>
+                        Jornada da Calma
+                        <br />
+                        <small>Helena Galante</small>
+                    </p>
+
+                </div>
+            </div>
+            <div class="item">
+                <div class="owlItemTemplate">
+                    <img src="Assets/autoconciente.png"/>
+                    <p>
+                        Autoconsciente
+                        <br />
+                        <small>B9, Regina Giannetti</small>
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="item">
-            <img src="Assets/LexFridman.jpg"/>
-            <p>Lex Fridman Podcast</p>
-        </div>
-        <div class="item">
-            <img src="Assets/MakeMeSmart.png"/>
-            <p>Make Me Smart - Marketplace</p>
-        </div>
-        <div class="item">
-            <img src="Assets/mustari.jpg"/>
-            <p>free fire - Mustari</p>
-        </div>
-        <div class="item">
-            <img src="Assets/Pivotjpg.jpg"/>
-            <p>Pivot - New York Magazine</p>
-        </div>
-        <div class="item">
-            <img src="Assets/ReplyAll.jpg"/>
-            <p>Reply - AllGimlet</p>
-        </div>
-        <div class="item">
-            <img src="Assets/TechStuff.jpg"/>
-            <p>TechStuff - iHeartPodcasts</p>
-        </div>
-        <div class="item">
-            <img src="Assets/TheDailyjpg.jpg"/>
-            <p>The Daily - The New York Times</p>
-        </div>
-        <div class="item">
-            <img src="Assets/thisAmericamLife.png"/>
-            <p>This American Life</p>
-        </div>
-    </div>
-    
+        <hr />
+    </section>
+
+
     <script src="https://kit.fontawesome.com/e717b920da.js" crossorigin="anonymous"></script>
     <script src="js/owl/jquery.min.js" crossorigin="anonymous"></script>
     <script src="js/owl/owl.carousel.min.js" crossorigin="anonymous"></script>
